# persona-chat-lab

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/api/: characters.py  chat.py
app/models/: schemas.py
app/prompts/: character_prompts.py
app/services/: character_loader.py  chat_service.py  retrieval_service.py
characters/: aria_knight.yaml  nori_librarian.yaml  zen_hacker.yaml
data/lore/: aria_knight.md  nori_librarian.md  zen_hacker.md
docs/: design-decisions.md  interview-prep.md  prompt-versions.md  rag-notes.md  rebuild-plan.md
docs/transcripts/: README.md  api-calls.txt  prompt-scores.md  rag-demo.txt  rendered-prompt-v1.txt  rendered-prompt-v2.txt
evals/: dataset.jsonl  rubrics.md
scripts/: build_faiss_index.py  eval_prompts.py  rag_demo.py  run_eval.py
tests/: conftest.py  test_character_loader.py  test_chat_pipeline.py  test_prompt_v2.py  test_prompts.py  test_retrieval.py
