[project]
name = "persona-chat-lab"
version = "0.1.0"
description = "Prompt-engineering lab for persona-based character chat: personas, RAG-grounded lore, and an eval harness."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.60.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "numpy>=1.26.0",
    "faiss-cpu>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
